--- a/si-app/src/index.html
+++ b/si-app/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>SciApp</title>
+  <title>Smart Injurance</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
